# claude-code-xl

./: .gitignore  README.md  clean_pycache.py  pyproject.toml  test_connection_recovery.py  test_conversation.py  test_gemini_response.py  test_permission.py  打包exe教程.md  重启claude code终端步骤.txt  重构进度总结.md
data/config/: api-config-example.json  api-config.json  system-prompts.json
data/history/: chat_0130_2359_你评估一下我的仿Claude code项.json
data/stats/: total_stats.json
src/claude_code/: __init__.py  __main__.py  __version__.py  app.py
src/claude_code/commands/: __init__.py  base.py  handlers.py  registry.py
src/claude_code/config/: __init__.py  defaults.py  settings.py
src/claude_code/core/: __init__.py  autosave.py  client.py  conversation.py  files.py  path_manager.py  stats.py  todo.py  tool_feedback.py
src/claude_code/tools/: __init__.py  base.py  command_safety.py  context.py  executor.py  file_cache.py  parser.py  permission.py  permission_ui.py  syntax_checker.py  tool_calling.py
src/claude_code/ui/: __init__.py  components.py  console.py  input.py  (+4 more)
tests/: conftest.py  test_api_client.py  test_api_config.py  test_api_stability.py  test_app.py  test_client.py  test_commands.py  test_components.py  test_console.py  test_conversation.py  test_defaults.py  test_file_cache.py  test_files.py  test_history.py  test_input.py  test_parser.py  test_path_manager.py  test_paths.py  test_permission.py  test_plan_mode.py  test_project_memory.py  test_settings.py  test_stats.py  test_theme.py  test_todo.py  test_tokens.py  test_tool_architecture.py  test_tools.py
(+13 files in other folders)
