[project]
name = "claude-code"
version = "2.8.40"
description = "Claude Code Terminal - 仿官方风格的 AI 编程助手"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
claude = "claude_code.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
